src/tests/cases/snapshots/ui__layout_under_120_width_under_30_height-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                              92Bps                                                                                    
                                                                                                                       
                                                                                                                       
                                                                                                                       
 4                                                   1                     0Bps / 26Bps                                
 1                                                   1                     0Bps / 22Bps                                
 5                                                   1                     0Bps / 22Bps                                
 2                                                   1                     0Bps / 21Bps                                
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       
                                                                                                                       

