src/tests/cases/snapshots/ui__layout_under_150_width_full_height-2.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                              92Bps                                                                                                                  
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
 4                                                   1                     0Bps / 26Bps                                                              
 1                                                   1                     0Bps / 22Bps                                                              
 5                                                   1                     0Bps / 22Bps                                                              
 2                                                   1                     0Bps / 21Bps                                                              
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
 <interface_name>:4434 => 2.2.2.2:54321 (  0Bps / 26Bps                    2.2.2.2                                   0Bps / 26Bps                    
 <interface_name>:443 => 1.1.1.1:12345 (t  0Bps / 22Bps                    1.1.1.1                                   0Bps / 22Bps                    
 <interface_name>:4435 => 3.3.3.3:1337 (t  0Bps / 22Bps                    3.3.3.3                                   0Bps / 22Bps                    
 <interface_name>:4432 => 4.4.4.4:1337 (t  0Bps / 21Bps                    4.4.4.4                                   0Bps / 21Bps                    
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     

