src/tests/cases/snapshots/ui__layout_under_150_width_full_height.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total Rate Up / Down: 0Bps / 0Bps                                                                                                                   
┌Utilization by process name────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Process                                                                         Connection count                 Rate Up / Down                    │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
│                                                                                                                                                   │
└───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Utilization by connection───────────────────────────────────────────────┐┌Utilization by remote address────────────────────────────────────────────┐
│Connection                                Rate Up / Down                ││Remote Address                            Rate Up / Down                 │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
└────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause.                                                                                                                             

