src/tests/cases/snapshots/ui__layout_under_150_width_under_30_height.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 Total Rate Up / Down: 0Bps / 0Bps                                                                                                                   
┌Utilization by process name─────────────────────────────────────────────┐┌Utilization by connection────────────────────────────────────────────────┐
│Process                                   Rate Up / Down                ││Connection                                Rate Up / Down                 │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
│                                                                        ││                                                                         │
└────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘

